--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -72,6 +72,7 @@ button:hover {
     border-radius: 7px;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     }
 
    .layerDescription {
