--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -315,7 +315,7 @@ function toggleDescriptionPanel() {
 
     fitRoute([...car1, ...flight1, ...flight2, ...car2]);
     showSummary();
-    updateDescription('<p>Smoky Mountain Invitational in Knoxville, TN. A key mid-season tournament, it featured many of the top teams in the country this year and would present more adveristy for Ego, as they would drop games to 7th seed North Carolina in pool play and 1st seed Carleton in quarterfinals. Not to leave empty-handed, they would rebound to beat rivals Oregon State in the final game to secure fifth place. View the full tournament results <a href="https://play.usaultimate.org/events/Smoky-Mountain-Invite-2025/schedule/Men/CollegeMen/" target="_blank" style="color: #aad8ff; text-decoration: underline;">here</a></p>');
+    updateDescription('<p>Smoky Mountain Invitational in Knoxville, TN. A key mid-season tournament, it featured many of the top teams in the country this year and would present some adveristy for Ego, as they would drop games to 7th seed North Carolina in pool play and 1st seed Carleton in quarterfinals. Not to leave empty-handed, they would rebound to beat rivals Oregon State in the final game to secure fifth place and go 5-2 on the weekend. View the full tournament results <a href="https://play.usaultimate.org/events/Smoky-Mountain-Invite-2025/schedule/Men/CollegeMen/" target="_blank" style="color: #aad8ff; text-decoration: underline;">here</a></p>');
     if (!panelOpen) toggleDescriptionPanel();
     if (!state.panelOpen) panelSelect();
   }
@@ -341,7 +341,7 @@ function toggleDescriptionPanel() {
 
     fitRoute([...car1, ...flight1, ...flight2, ...car2]);
     showSummary();
-    updateDescription('<p>Easterns in Wilmington, NC. This end-of-season event features the strongest teams nationwide and serves as a key test before Nationals. Entering as the 5th seed, Ego would go 3-1 in pool play, dropping a close game to rival Colorado, the 4th seed. The team would respond with a resounding quarterfinals victory over 3rd seeded Carleton, but would go on to lose the semifinal game against Massachusetts. Not deterred, Oregon Ego proceeded to beat 1st seeded North Carolina in the final game of the weekend to secure 3rd place. View the full tournament results <a href="https://play.usaultimate.org/events/Easterns-2025/schedule/Men/CollegeMen/division_1/" target="_blank" style="color: #aad8ff; text-decoration: underline;">here</a></p>');
+    updateDescription('<p>Easterns in Wilmington, NC. This end-of-season event features the strongest teams nationwide and serves as a key test before Nationals. Entering as the 5th seed, Ego would go 3-1 in pool play, dropping a close game to 4th seeded Colorado. The team would respond with a resounding quarterfinals victory over 3rd seeded Carleton, but would go on to lose the semifinal game against Massachusetts. Not deterred, Oregon Ego proceeded to beat 1st seeded North Carolina in the final game of the weekend to secure 3rd place and a 5-2 record on the weekend. View the full tournament results <a href="https://play.usaultimate.org/events/Easterns-2025/schedule/Men/CollegeMen/division_1/" target="_blank" style="color: #aad8ff; text-decoration: underline;">here</a></p>');
     if (!panelOpen) toggleDescriptionPanel();
     if (!state.panelOpen) panelSelect();
   }
