made panel smaller

--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Ultimate Frisbee Trips</title>
+  <title>Oregon Ego Tournament Travel Map</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet" />
@@ -271,7 +271,7 @@ function toggleDescriptionPanel() {
     toggle.textContent = '▲';
     descriptionText.style.display = 'none';
   } else {
-    panel.style.height = '600px';
+    panel.style.height = '500px';
     toggle.textContent = '▼';
     descriptionText.style.display = 'block';
   }
