--- a/Assignments/project.html
+++ b/Assignments/project.html
@@ -383,9 +383,8 @@ function toggleDescriptionPanel() {
     if (!panelClosed) toggleDescriptionPanel();
     if (!state.panelClosed) panelSelect();
   }
-
+  map.on('load', toggleDescriptionPanel); //need to call this here so description panel starts collapsed
   map.on('load', loadPresDay);  //on site load, the President's Day Invite map will be displayed 
-  map.on('load', toggleDescriptionPanel);  //on site load, close the description panel, as the above call opens it
   
 </script>
 </body>
